<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inst"
        android:textSize="40dp"
        android:layout_marginTop="33dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/textView3"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:textColor="@color/colorPrimary"
        android:text="@string/objective" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/moving"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.example.justen.shapedodge.JoystickView
        android:id="@+id/joystickView"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_weight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/joystickView"
        android:id="@+id/textView7"
        android:textColor="@color/colorPrimary"
        android:text="@string/hitdetect"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:id="@+id/textView8"
        android:textColor="@color/colorPrimary"
        android:text="@string/powerups"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/unlocks" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/colorbutton"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:text="main menu" />

</RelativeLayout>